created a div as big as the viewport

--- a/exercise-20/index.html
+++ b/exercise-20/index.html
@@ -7,25 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="calculator">
-        <div class="key display"></div>
-        <div class="key cancel">C</div>
-        <div class="key symbol">/</div>
-        <div class="key symbol">*</div>
-        <div class="key symbol">-</div>
-        <div class="key numpad">7</div>
-        <div class="key numpad">8</div>
-        <div class="key numpad">9</div>
-        <div class="key symbol">+</div>
-        <div class="key numpad">4</div>
-        <div class="key numpad">5</div>
-        <div class="key numpad">6</div>
-        <div class="key equal">=</div>
-        <div class="key numpad">1</div>
-        <div class="key numpad">2</div>
-        <div class="key numpad">3</div>
-        <div class="key numpad">0</div>
-        <div class="key numpad">.</div>
-    </div>    
+    <div class="box"></div>    
 </body>
 </html>
